--- a/config/config.json
+++ b/config/config.json
@@ -5,8 +5,9 @@
     "publicKey": "xray x25519 Public key"
   },
   "nginx": {
-    "version": "1.22.1",
-    "domain": "example.com"
+    "version": "1.23.3",
+    "domain": "example.com",
+    "openssl": "3.1.0"
   },
   "cloudreve": {
     "version": "3.7.1",
