--- a/service/nginx.service
+++ b/service/nginx.service
@@ -12,7 +12,7 @@ ExecStartPre=/bin/chmod 660 /dev/shm/nginx
 ExecStartPre=/usr/sbin/nginx -t -q -g 'daemon on; master_process on;'
 ExecStart=/usr/sbin/nginx -g 'daemon on; master_process on;'
 ExecReload=/usr/sbin/nginx -g 'daemon on; master_process on;' -s reload
-ExecStop=-/sbin/start-stop-daemon --quiet --stop --retry QUIT/5 --pidfile /run/nginx.pid
+ExecStop=/bin/kill -s QUIT $MAINPID
 ExecStopPost=/bin/rm -rf /dev/shm/nginx
 TimeoutStopSec=5
 KillMode=mixed
