Update tcp_collapse_max_bytes info

--- a/config/sysctl.conf
+++ b/config/sysctl.conf
@@ -1,6 +1,10 @@
 # Ref: https://github.com/MoeClub/Note
 # Ref: https://github.com/leitbogioro/Tools
 # Ref: https://www.nodeseek.com/post-37225-1
+# Ref: https://blog.cloudflare.com/optimizing-tcp-for-high-throughput-and-low-latency/
+
+# 注意：模块 "tcp_collapse_max_bytes "由 Cloudflare 完成，需要自行下载并应用补丁，否则该模块将无法生效。
+# 补丁: https://github.com/cloudflare/linux/blob/master/patches/0014-add-a-sysctl-to-enable-disable-tcp_collapse-logic.patch
 
 # ------ 网络调优: 基本 ------
 # TTL 配置, Linux 默认 64
@@ -21,7 +25,7 @@ net.ipv4.tcp_mem = 2097152 8388608 536870912
 net.ipv4.tcp_rmem = 16384 524288 536870912
 net.ipv4.tcp_wmem = 16384 524288 536870912
 net.ipv4.tcp_adv_win_scale = -2
-net.ipv4.tcp_collapse_max_bytes = 6291456
+# net.ipv4.tcp_collapse_max_bytes = 6291456
 net.ipv4.tcp_notsent_lowat = 131072
 net.ipv4.ip_local_port_range = 1024 65535
 net.core.netdev_max_backlog = 65536
