--- a/config/sysctl.conf
+++ b/config/sysctl.conf
@@ -62,7 +62,7 @@ net.netfilter.nf_conntrack_tcp_timeout_fin_wait = 30
 net.netfilter.nf_conntrack_tcp_timeout_time_wait = 30
 net.netfilter.nf_conntrack_tcp_timeout_close_wait = 15
 net.netfilter.nf_conntrack_tcp_timeout_established = 300
-net.ipv4.netfilter.ip_conntrack_tcp_timeout_established = 7200
+# net.ipv4.netfilter.ip_conntrack_tcp_timeout_established = 7200
 # TIME-WAIT 状态调优
 # 4.12 内核中此参数已经永久废弃, 不用纠结是否需要开启
 # net.ipv4.tcp_tw_recycle = 0
