--- a/nginx/conf/sites-available/example.com.conf
+++ b/nginx/conf/sites-available/example.com.conf
@@ -1,9 +1,10 @@
 # Cloudreve
 server {
-    listen              unix:/dev/shm/nginx/cloudreve.sock ssl;
+    listen              unix:/dev/shm/nginx/cloudreve.sock ssl; # proxy_protocol;
     http2               on;
     set_real_ip_from    unix:;
-    server_name         drive.example.com pan.example.com;
+    # real_ip_header      proxy_protocol;
+    server_name         domain;
 
     # SSL
     ssl_certificate     /usr/local/nginx/conf/certs/example.com/fullchain.pem;
