--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -18,8 +18,7 @@ events {
 
 stream {
     map $ssl_preread_server_name $backend_name {
-        drive.example.com unpack;
-        pan.example.com   unpack;
+        example.com       unpack;
         default           default_backend;
     }
 
