--- a/nginx/conf/sites-available/example.com.conf
+++ b/nginx/conf/sites-available/example.com.conf
@@ -1,23 +1,52 @@
 # Cloudreve
 server {
-    listen              unix:/dev/shm/nginx/cloudreve.sock ssl; # proxy_protocol;
-    http2               on;
-    set_real_ip_from    unix:;
-    # real_ip_header      proxy_protocol;
-    server_name         domain;
+    # h3
+    listen                       443 quic reuseport;
+    listen                       [::]:443 quic reuseport;
+    add_header Alt-Svc           'h3=":443"; ma=86400';
+
+    # h2
+    listen                       unix:/dev/shm/nginx/cloudreve.sock ssl backlog=2048 so_keepalive=on proxy_protocol;
+    http2                        on;
+    set_real_ip_from             unix:;
+    real_ip_header               proxy_protocol;
 
     # SSL
-    ssl_certificate     /usr/local/nginx/conf/certs/example.com/fullchain.pem;
-    ssl_certificate_key /usr/local/nginx/conf/certs/example.com/privkey.pem;
-    ssl_early_data      on;
+    ssl_certificate              /usr/local/nginx/conf/certs/example.com/fullchain.pem;
+    ssl_certificate_key          /usr/local/nginx/conf/certs/example.com/privkey.pem;
+    ssl_early_data               on;
 
     # security
-    include             nginxconfig.io/security.conf;
-    include             nginxconfig.io/limit.conf;
+    include                      nginxconfig.io/security.conf;
+    include                      nginxconfig.io/limit.conf;
 
     # logging
-    access_log          /var/log/nginx/access.log combined buffer=512k flush=1m;
-    error_log           /var/log/nginx/error.log warn;
+    access_log                   /var/log/nginx/access.log combined buffer=512k flush=1m;
+    error_log                    /var/log/nginx/error.log warn;
+
+    # 以下参数请根据服务器内存大小自行调整
+    http2_max_concurrent_streams 1024;
+    http2_body_preread_size      128k;
+    http3_max_concurrent_streams 1024;
+    http3_stream_buffer_size     512k;
+    keepalive_time               1h;
+    keepalive_timeout            600s;
+    keepalive_requests           2048;
+    client_body_buffer_size      512k;
+    client_body_timeout          600s;
+    client_header_timeout        300s;
+    large_client_header_buffers  8 16k;
+    proxy_buffering              off;
+    proxy_request_buffering      off;
+
+    # xhttp path
+    location /yourpath {
+        grpc_pass                  grpc://unix:/dev/shm/nginx/xhttp_reality.sock;
+        grpc_set_header Host       $http_host;
+        client_max_body_size       0;
+        include                    nginxconfig.io/grpc.conf;
+        grpc_set_header Early-Data $ssl_early_data;
+    }
 
     # reverse proxy
     location / {
@@ -31,17 +60,4 @@ server {
 
     # additional config
     include nginxconfig.io/general.conf;
-}
-
-# HTTP redirect
-server {
-    listen      80 reuseport;
-    listen      [::]:80 reuseport;
-    server_name .example.com;
-    include     nginxconfig.io/letsencrypt.conf;
-    include     nginxconfig.io/limit.conf;
-
-    location / {
-        return 301 https://$host$request_uri;
-    }
 }
