--- a/nginx/conf/nginxconfig.io/letsencrypt.conf
+++ b/nginx/conf/nginxconfig.io/letsencrypt.conf
@@ -1,4 +1,6 @@
 # ACME-challenge
 location ^~ /.well-known/acme-challenge/ {
-    root /var/www/_letsencrypt;
+    root           /var/www/_letsencrypt;
+    default_type   text/plain;
+    try_files $uri =404;
 }
