--- a/nginx/conf/modules-enabled/stream.conf
+++ b/nginx/conf/modules-enabled/stream.conf
@@ -1,12 +1,17 @@
 stream {
     map $ssl_preread_server_name $tcpsni_name {
-        example.com vision_reality;
-        default     default_backend;
+        example.com     vision_reality;
+        # cdn.example.com cdn_xhttp;
+        default         default_backend;
     }
 
     upstream vision_reality {
         server unix:/dev/shm/nginx/vision_reality.sock;
     }
+
+    # upstream cdn_xhttp {
+    #     server unix:/dev/shm/nginx/cdn_xhttp.sock;
+    # }
 
     upstream default_backend {
         server unix:/dev/shm/nginx/default_backend.sock;
