--- a/nginx/conf/conf.d/redirect.conf
+++ b/nginx/conf/conf.d/redirect.conf
@@ -2,7 +2,7 @@
 server {
     listen      80 reuseport;
     listen      [::]:80 reuseport;
-    include     nginxconfig.io/letsencrypt.conf;
+    include     nginxconfig.io/zerossl.conf;
     include     nginxconfig.io/limit.conf;
 
     location / {
