add hash32 field

--- a/config.json
+++ b/config.json
@@ -20,6 +20,7 @@
     "path": "",
     "privateKey": "",
     "publicKey": "",
+    "hash32": "",
     "target": "",
     "serverNames": [
       ""
